@@ -4,26 +4,50 @@ import com.fit.laprime.entity.Role;
 import com.fit.laprime.entity.User;
 import com.fit.laprime.repository.UserRepository;
 import com.fit.laprime.service.UserService;
-import com.fit.laprime.web.dto.UserRegistrationDTO;
+import com.fit.laprime.dto.UserRegistrationDTO;
 import lombok.AllArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.security.core.userdetails.UsernameNotFoundException;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Service;
 
+import java.util.Arrays;
+import java.util.Collection;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @AllArgsConstructor
 @Service
 public class UserServiceImpl implements UserService {
 
+    private final UserRepository userRepository;
+
     @Autowired
-    private UserRepository userRepository;
+    private BCryptPasswordEncoder passwordEncoder;
 
     @Override
-    public User save(UserRegistrationDTO userRegistrationDTO) {
-        User user = new User(userRegistrationDTO.getFirstName(),
-                    userRegistrationDTO.getLastName(), userRegistrationDTO.getEmail(),
-                    userRegistrationDTO.getPassword(), List.of(new Role("USER")));
+    public User save(UserRegistrationDTO registrationDto) {
+        User user = new User(registrationDto.getFirstName(),
+                registrationDto.getLastName(), registrationDto.getEmail(),
+                passwordEncoder.encode(registrationDto.getPassword()), Arrays.asList(new Role("ROLE_USER")));
 
         return userRepository.save(user);
+    }
+
+    @Override
+    public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
+
+        User user = userRepository.findByEmail(username);
+        if(user == null) {
+            throw new UsernameNotFoundException("Invalid username or email");
+        }
+        return new org.springframework.security.core.userdetails.User(user.getEmail(), user.getPassword(), mapRolesToAuthorities(user.getRoles()));
+    }
+
+    private Collection<? extends GrantedAuthority> mapRolesToAuthorities(Collection<Role> roles) {
+        return roles.stream().map(role -> new SimpleGrantedAuthority(role.getName())).collect(Collectors.toList());
     }
 }
